--- a/Tampilan/styles.css
+++ b/Tampilan/styles.css
@@ -1,3 +1,21 @@
+/* Tabel */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  border: 1px solid black;
+}
+
+th, td {
+  border: 1px solid black; /* Hapus !important */
+  padding: 10px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+/* Body */
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -5,11 +23,16 @@ body {
   background-color: #f4f4f4;
 }
 
+/* Header */
 header {
   background: #35424a;
   color: #ffffff;
   padding: 20px 0;
   text-align: center;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 nav ul {
@@ -27,20 +50,22 @@ nav ul li a {
   text-decoration: none;
 }
 
+/* Section */
 section {
   padding: 20px;
-  margin: 20px;
+  margin: 80px 20px 20px 20px; /* Jaga agar tidak tertutup header */
   background: #ffffff;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+/* Footer */
 footer {
   text-align: center;
   padding: 10px 0;
   background: #35424a;
   color: #ffffff;
-  position: relative;
+  position: fixed;
   bottom: 0;
   width: 100%;
 }
